hopefully fixed text colour issue on safari

--- a/src/css/WordPage.css
+++ b/src/css/WordPage.css
@@ -15,6 +15,7 @@
     border: none;
     margin: 2px;
     background-color: rgb(92, 92, 92);
+    color: black;
 }
 
 .active {
